# SerialPortToolGUI

./: .gitignore  CMakeLists.txt  README.md  SerialPortToolGUI.ui  SerialPortToolGUI.ui~
.github/workflows/: cmake.yml
msvc/: SerialPortToolGUI.sln  SerialPortToolGUI.vcxproj  SerialPortToolGUI.vcxproj.filters
snap/: snapcraft.yaml
snap/gui/: SerialPortToolGUI.desktop  serialporttoolgui.desktop
sptsrc/: main.cpp  port_control.cpp  port_control.h  utility.cpp  utility.h
